--- a/DailyDosage/Views/Medication/Details.cshtml
+++ b/DailyDosage/Views/Medication/Details.cshtml
@@ -13,7 +13,7 @@
     <tr>
         <td>@Model.Name</td>
         <td>@Model.Description</td>
-        <td>@Model.Category</td>
+        <td>@Model.CategoryName</td>
         <td>@Model.Dosage</td>
 
     </tr>
