--- a/DailyDosage/Views/Medication/Add.cshtml
+++ b/DailyDosage/Views/Medication/Add.cshtml
@@ -37,8 +37,8 @@
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="Category"></label>
-        <select asp-for="Category" asp-items="Model.Categories"></select>
+        <label asp-for="CategoryName"></label>
+        <select asp-for="CategoryName" asp-items="Model.Categories"></select>
     </div>
     <div class="form-group">
         <label asp-for="Dosage"></label>
