--- a/DailyDosage/Views/Medication/Index.cshtml
+++ b/DailyDosage/Views/Medication/Index.cshtml
@@ -9,7 +9,7 @@
 {
 <p>No medications yet!</p>
 }
-
+<h2>@ViewBag.CategoryName</h2>
 
 
 <table class="table">
@@ -17,41 +17,9 @@
     {
     <tr>
         <th>@medication.Name</th>
-        
         <th><a asp-controller="Medication" asp-action="Details" asp-route-id="@medication.ID">View</a></th>
         <th><a asp-controller="Medication" asp-action="Edit" asp-route-id="@medication.ID">Edit</a></th>
         <th><a asp-controller="Medication" asp-action="Delete" asp-route-id="@medication.ID">Delete</a></th>
     </tr>
     }
     </table>
-
-
-@*@if (Model.Count == 0)
-    {
-        <p>No medications yet!</p>
-    }
-    <table class="table">
-        <tr>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Category</th>
-            <th>Dosage</th>
-        </tr>
-        @foreach (var medication in Model)
-        {
-            var photoPath = "~/images/" + (medication.PhotoPath ?? "noimage.jpg");
-            <tr>
-                <th>@medication.Name</th>
-                <th>@medication.Description</th>
-                <th>@medication.Category.Name</th>
-                <th>@medication.Dosage</th>
-
-                <th><a asp-controller="Home" asp-action="Details" asp-route-id="@medication.ID">View</a></th>
-                <th><a asp-controller="Home" asp-action="Edit" asp-route-id="@medication.ID">Edit</a></th>
-                <th><a asp-controller="Medication" asp-action="Delete" asp-route-id="@medication.ID">Delete</a></th>
-            </tr>
-            <tr>
-                <td><img src="@photoPath" asp-append-version="true" /></td>
-            </tr>
-        }
-    </table>*@
