--- a/DailyDosage/Views/Medication/Index.cshtml
+++ b/DailyDosage/Views/Medication/Index.cshtml
@@ -2,8 +2,7 @@
 <h1>Medications</h1>
 
 <p>
-    <a asp-controller="Medication" asp-action="Add">Add</a>&nbsp;&nbsp;
-    <a asp-controller="Medication" asp-action="Remove">Remove</a>
+    <a asp-controller="Medication" asp-action="Add">Add Medication</a>
 </p>
 @if (Enumerable.Count(ViewBag.AccountMeds) == 0)
 {
